--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,26 @@
-.App {
-  text-align: center;
+* { 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+html, body, #root { 
+  width: 100%;
+  height: 100%;
+}
+
+
+#root {
+  background-image:
+    linear-gradient(to top, rgba(36,36,36,1) 30%, rgba(36,36,36,.4) 80%, rgba(36,36,36,0.6) 100%),
+    url(assets/images/main_bg.jpg);
+    background-size: cover;
+    background-position: 60%;
+    width: 100%;
+    height: 100%;
+}
+
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -11,9 +30,9 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,8 +41,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
+} */
+/* 
 .App-link {
   color: #61dafb;
 }
@@ -32,7 +51,8 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
-}
+} */
