--- a/client/src/styles/main.module.scss
+++ b/client/src/styles/main.module.scss
@@ -49,3 +49,12 @@
     }
 }
 
+.banner { 
+    padding: 2rem 0;
+    span {
+        font-family: 'Russo One', sans-serif;
+        color: $color-primary;
+        font-size: 42pt;
+    }
+}
+
