--- a/client/src/styles/main.module.scss
+++ b/client/src/styles/main.module.scss
@@ -1,9 +1,6 @@
 @import './foundation';
 
-.main_text { 
-    color: $color-primary;
-}
-
+// ::::::::::::::::: NAVIGATION BAR
 #navbar { 
     color: white;
     padding: 0 1rem;
@@ -49,6 +46,7 @@
     }
 }
 
+// ::::::::::::::::: BANNER
 .banner { 
     padding: 2rem 0;
     span {
@@ -56,5 +54,19 @@
         color: $color-primary;
         font-size: 42pt;
     }
+
+    p { 
+        width: 60%;
+        color: white;
+    }
 }
 
+
+// ::::::::::::::::: MAP
+.map_container {
+    position: relative;
+    border: 2px solid magenta; 
+    width: 80%;
+    height: 600px;
+    margin: 0 auto;
+}
