add: form for searching cities

--- a/client/src/styles/_foundation.scss
+++ b/client/src/styles/_foundation.scss
@@ -2,6 +2,8 @@
 
 // :::: base styling
 $color-primary: #5AE4B3;
+$color-dark: #242424;
+$color-text-dark: #bfbfbf;
 $base-font: 'Poppins', sans-serif;
 
 * { 
