--- a/client/src/styles/main.module.scss
+++ b/client/src/styles/main.module.scss
@@ -65,8 +65,8 @@
 // ::::::::::::::::: MAP
 .map_container {
     position: relative;
-    border: 2px solid magenta; 
     width: 80%;
     height: 600px;
     margin: 0 auto;
+    border-radius: 10px;
 }
