refactor: change variable names in the map component
Following changes were also made:
- Add shaddow to maps and info-panel layout container
- maintain mock response in the be for requesting cities
- start to build the layout for info-panel for the city info

--- a/client/src/styles/_foundation.scss
+++ b/client/src/styles/_foundation.scss
@@ -3,6 +3,7 @@
 // :::: base styling
 $color-primary: #5ae4b3;
 $color-dark: #242424;
+$color-background-dark: #323232;
 $color-text-dark: #bfbfbf;
 $color-text-faded: #a3a3a3;
 $base-font: "Poppins", sans-serif;
