--- a/client/src/styles/main.module.scss
+++ b/client/src/styles/main.module.scss
@@ -81,6 +81,16 @@
   box-shadow: -1px 3px 25px 0px rgba(0, 0, 0, 0.39);
   -webkit-box-shadow: -1px 3px 25px 0px rgba(0, 0, 0, 0.39);
   -moz-box-shadow: -1px 3px 25px 0px rgba(0, 0, 0, 0.39);
+
+  .cityTitle { 
+    font-size: 9pt;
+  }
+
+  .cityWeatherInfo { 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .mainContentContainer {
