add: login form and api call
The following items where changed:
- added comments to methods
- added a login form in a modal
- connected to the BE

--- a/client/src/styles/_foundation.scss
+++ b/client/src/styles/_foundation.scss
@@ -7,6 +7,7 @@ $color-background-dark: #323232;
 $color-text-dark: #bfbfbf;
 $color-text-faded: #a3a3a3;
 $base-font: "Poppins", sans-serif;
+$button-hover-dark: #45b28c;
 
 * {
   font-family: $base-font;
