--- a/client/src/styles/main.module.scss
+++ b/client/src/styles/main.module.scss
@@ -4,22 +4,6 @@
 #navbar {
   color: white;
   padding: 0 1rem;
-
-  .logo_container {
-    position: relative;
-    padding: 0.7rem 0.6rem;
-    .dot {
-      display: block;
-      width: 10px;
-      height: 10px;
-      background-color: $color-primary;
-      border-radius: 50%;
-      position: absolute;
-      bottom: 30px;
-      right: -10px;
-    }
-  }
-
   .nav_items_container {
     list-style-type: none;
 
@@ -41,6 +25,27 @@
     }
   }
 }
+
+
+.logo_container {
+  position: relative;
+  padding: 0.7rem 0.6rem;
+  display: inline-block;
+  h1 { 
+    display: inline;
+  }
+  .dot {
+    display: block;
+    width: 10px;
+    height: 10px;
+    background-color: $color-primary;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 22px;
+    right: -7px;
+  }
+}
+
 
 // ::::::::::::::::: BANNER
 .banner {
@@ -263,7 +268,35 @@
       border-radius: 15px;
 
       &:hover {
-        background-color: #45b28c;
+        background-color: $button-hover-dark
+      }
+    }
+  }
+}
+
+
+.modalBody { 
+  background-color: white;
+  padding: 2rem;
+  border-radius: 10px;
+}
+
+.modalButtonsContainer { 
+  button { 
+    &:last-child { 
+      margin: 0 1rem;
+      background-color: transparent;
+      color: $color-dark;
+      border: none;
+    }
+
+    &:first-child { 
+      background-color: $color-primary;
+      border-radius: 20px;
+      border: none;
+
+      &:hover { 
+        background-color: $button-hover-dark;
       }
     }
   }
